readme finished; log messages added; bin property to package.json added

--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
 	"name": "youtube-cli",
 	"version": "1.0.0",
-	"description": "A simple cli to download videos and audio from youtube",
-	"main": "index.js",
+	"description": "A simple cli to download audios from youtube",
+	"main": "app.js",
 	"scripts": {
 		"test": "mocha"
+	},
+	"bin": {
+		"youtube-cli": "./app.js"
 	},
 	"keywords": [
 		"cli",
 		"yargs",
 		"nodejs",
-		"youtube"
+		"youtube",
+		"download"
 	],
 	"author": "Oliver Goetz",
-	"license": "ISC",
+	"license": "MIT",
 	"dependencies": {
 		"chalk": "^4.1.0",
-		"config": "^3.3.1",
+		"configstore": "^5.0.1",
+		"figlet": "^1.5.0",
 		"fluent-ffmpeg": "^2.1.2",
 		"ora": "^5.0.0",
 		"winston": "^3.3.3",
@@ -26,6 +31,8 @@
 	"devDependencies": {
 		"chai": "^4.2.0",
 		"mocha": "^8.1.3",
-		"mock-fs": "^4.13.0"
+		"mock-fs": "^4.13.0",
+		"sinon": "^9.0.3",
+		"sinon-chai": "^3.5.0"
 	}
 }
